// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title is backwards compatible (text passed as prop) 1`] = `
<div
  className="theme-base"
  onClick={[Function]}
>
  <h1
    className="h1Title alignCenter"
  >
    h1 default title
  </h1>
</div>
`;

exports[`Title renders properly 1`] = `
<div
  className="theme-base"
  onClick={[Function]}
>
  <h1
    className="h1Title alignCenter"
  >
    h1 default title
  </h1>
</div>
`;

exports[`Title works with align 1`] = `
<div
  className="theme-base"
  onClick={[Function]}
>
  <h1
    className="h1Title alignLeft"
  >
    h1 default title
  </h1>
</div>
`;
